# Modern-C

./: .gitignore  CMakeLists.txt
src/: 1_sequential_sorting.c  git_new_file_test.cpp
