cmake_minimum_required(VERSION 3.30)
project(004_Modern_C C)

set(CMAKE_C_STANDARD 11)

include_directories(${CMAKE_SOURCE_DIR}/src)

add_executable(ex_01 src/1_sequential_sorting.c
        src/git_new_file_test.cpp)
add_executable(ex_02 src/1_sequential_sorting_string.c)
add_executable(ex_03 src/2_numerical_derivatives.c)
add_executable(ex_04 src/3_pi.c)
add_executable(ex_05 src/4_union_find.c)
add_executable(ex_06 src/5_complex_numbers.c)
add_executable(ex_07 src/6_linear_algebra.c)
add_executable(ex_08 src/7_adjacency_matrix.c)
add_executable(ex_09 src/8_shortest_path.c)
add_executable(ex_10 src/9_factorization.c)
add_executable(ex_11 src/10_performance_comparison_of_sorting_algorithm.c)
add_executable(ex_12 src/11_image_segmentation.c)
add_executable(ex_13 src/12_text_processor.c)
add_executable(ex_14 src/13_generic_derivative.c)
add_executable(ex_15 src/14_generic_sorting.c)
add_executable(ex_16 src/15_text_processing_in_strings.c)
add_executable(ex_17 src/16_text_processing_in_streams.c)
add_executable(ex_18 src/17_text_processor_sophistication.c)
add_executable(ex_19 src/18_parallel_sorting_with_threads.c)
